[package]
edition = "2021"
name = "presence-sensor"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.3.0"
btleplug = "0.10.4"
futures = "0.3.26"
lru = "0.9.0"
pretty_env_logger = "0.4.0"
tokio = { version = "1.25.0", features = ["full"] }
toml = "0.7.2"
